--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -1,13 +1,12 @@
 server {
     listen       80 default_server;
-    listen       [::]:80 default_server;
     server_name  _;
 
     location /static/ {
         alias /code/static/;
     }
 
-    location ~ ^/(admin|api) {
+    location ~ ^/(admin|api|__debug__) {
         proxy_pass http://django:8000;
     }
 
