--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -11,3 +11,4 @@ RUN pip install --no-cache-dir -r ./requirements.txt
 COPY . .
 
 ENTRYPOINT ["./entrypoint.sh"]
+#ENTRYPOINT ["tail", "-f", "/dev/null"]
