--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,23 @@ services:
     depends_on:
       - django
 
+  fastapi:
+    restart: always
+    build: ./fastapi-solution/src
+    env_file:
+      - ./fastapi-solution/api.env
+    depends_on:
+      - db
+      - redis
+      - elasticsearch
+    volumes:
+      - ./fastapi-solution/src/:/opt/app/
+    ports:
+      - "8001:8000"
+
   django:
     build: ./django/ 
-    restart: "no"
+    restart: always
     env_file: ./django/.env
     volumes:
       - static_volume:/code/static
@@ -37,6 +51,8 @@ services:
       - 8000:8000
     depends_on:
       - db
+      - redis
+      - elasticsearch
   
   elasticsearch:
     restart: always
