change api url in nginx

--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -6,7 +6,11 @@ server {
         alias /code/static/;
     }
 
-    location ~ ^/(admin|api|__debug__) {
+    location ~ ^/(api) {
+        proxy_pass http://fastapi:8000;
+    }
+
+    location ~ ^/(admin|__debug__) {
         proxy_pass http://django:8000;
     }
 
