fixed 1,3,6 from issue 20

--- a/fastapi-solution/src/Dockerfile
+++ b/fastapi-solution/src/Dockerfile
@@ -10,6 +10,6 @@ COPY requirements.txt requirements.txt
 RUN  apt update && apt install gcc && pip install --upgrade pip \
      && pip install --no-cache-dir -r requirements.txt
 
-#COPY . .
+COPY . .
 
 ENTRYPOINT ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
