--- a/fastapi-solution/src/Dockerfile
+++ b/fastapi-solution/src/Dockerfile
@@ -12,4 +12,4 @@ RUN  apt update && apt install gcc && pip install --upgrade pip \
 
 COPY . .
 
-ENTRYPOINT ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+ENTRYPOINT ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"]
