--- a/fastapi-solution/src/requirements.txt
+++ b/fastapi-solution/src/requirements.txt
@@ -22,6 +22,7 @@ sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
 urllib3==2.1.0
+gunicorn==20.0.4
 uvicorn==0.24.0.post1
 yarl==1.9.2
 aiohttp==3.9.0
