Реализовал задачу по созданию инфраструктуры

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       timeout: 10s
       retries: 5
     env_file: ./postgres/.env
+    ports:
+        - 5432:5432
     volumes:
         - ./postgres/init_pg:/docker-entrypoint-initdb.d
         - postgres_data:/var/lib/postgresql/data
@@ -31,8 +33,9 @@ services:
   fastapi:
     restart: always
     build: ./fastapi-solution/src
+    image: fastapi-image
     env_file:
-      - ./fastapi-solution/api.env
+      - fastapi-solution/src/api.env
     depends_on:
       redis:
         condition: service_started
@@ -43,14 +46,18 @@ services:
 
     volumes:
       - ./fastapi-solution/src/:/opt/app/
+    ports:
+      - "8001:8000"
 
   django:
-    build: ./django/ 
+    build: ./django/
     restart: always
     env_file: ./django/.env
     volumes:
       - static_volume:/code/static
       - ./sqlite_to_postgres:/in_data
+    ports:
+      - 8000:8000
     depends_on:
       db:
         condition: service_healthy
@@ -58,7 +65,7 @@ services:
         condition: service_started
       elasticsearch:
         condition: service_started
-  
+
   elasticsearch:
     restart: always
     image: elasticsearch:8.10.2
@@ -68,6 +75,8 @@ services:
       - "ES_JAVA_OPTS=-Xms200m -Xmx200m"
     volumes:
       - esdata:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
 
   redis:
     restart: always
@@ -75,6 +84,8 @@ services:
     environment:
       REDIS_USER: admin
       REDIS_PASSWORD: admin
+    ports:
+      - 6379:6379
 
   etl:
     build: ./etl
