--- a/fastapi-solution/src/api.env
+++ b/fastapi-solution/src/api.env
@@ -1,7 +1,8 @@
-REDIS_HOST=redis
+PROJECT_NAME=movies
+REDIS_HOST=localhost
 REDIS_PORT=6379
 ELASTIC_SCHEME=http
-ELASTIC_HOST=elasticsearch
+ELASTIC_HOST=localhost
 ELASTIC_PORT=9200
 
 PYTHONPATH=/opt/
