--- a/fastapi-solution/tests/functional/requirements.txt
+++ b/fastapi-solution/tests/functional/requirements.txt
@@ -1,3 +1,5 @@
-pytest==6.1.2
-pytest-asyncio==0.12.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
 aiohttp==3.7.2
+pydantic_settings==2.1.0
+httpx==0.25.2
