--- a/fastapi-solution/tests/functional/docker-compose.yml
+++ b/fastapi-solution/tests/functional/docker-compose.yml
@@ -1,18 +1,23 @@
-version: '3'
+version: '3.9'
+
+
+x-env-variables: &x-env-variables
+  PYTHONPATH: /fastapi-solution/src:/fastapi-solution/tests
+  APP_HOST: fastapi
+  APP_PORT: 8000
+  ES_HOST: elasticsearch
+  ES_PORT: 9200
+  ES_MOVIES_INDEX: movies
+  REDIS_HOST: redis
+  REDIS_PORT: 6379
+
+
 services:
   fastapi:
     container_name: fastapi
     build: ../../src
     image: fastapi-image
-    environment:
-      - PYTHONPATH=/fastapi-solution/src:/fastapi-solution/tests
-      - PROJECT_NAME=fastapi-solution
-      - ELASTIC_SCHEME=http
-      - ELASTIC_HOST=elasticsearch
-      - ELASTIC_PORT=9200
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-
+    environment: *x-env-variables
     entrypoint: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     ports:
       - 8000:8000
@@ -44,14 +49,7 @@ services:
   tests:
     container_name: tests
     image: fastapi-image
-    environment:
-      - PYTHONPATH=/fastapi-solution/src:/fastapi-solution/tests
-      - APP_HOST=fastapi
-      - APP_PORT=8000
-      - ES_HOST=elasticsearch
-      - ES_PORT=9200
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+    environment: *x-env-variables
     volumes:
       - ../../:/fastapi-solution/:ro
     entrypoint: >
