--- a/fastapi-solution/api.env
+++ b/fastapi-solution/api.env
@@ -1,8 +1,8 @@
 PROJECT_NAME=movies
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 ELASTIC_SCHEME=http
-ELASTIC_HOST=localhost
+ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
 
 PYTHONPATH=/opt/
