--- a/fastapi-solution/tests/functional/docker-compose.yml
+++ b/fastapi-solution/tests/functional/docker-compose.yml
@@ -8,6 +8,8 @@ x-env-variables: &x-env-variables
   ES_HOST: elasticsearch
   ES_PORT: 9200
   ES_MOVIES_INDEX: movies
+  ES_GENRES_INDEX: genres
+  ES_PERSONS_INDEX: persons
   REDIS_HOST: redis
   REDIS_PORT: 6379
 
@@ -16,11 +18,10 @@ services:
   fastapi:
     container_name: fastapi
     build: ../../src
-    image: fastapi-image
     environment: *x-env-variables
-    entrypoint: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    entrypoint: ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"]
     ports:
-      - 8000:8000
+      - "8000:8000"
     depends_on:
       - elasticsearch
       - redis
@@ -48,7 +49,7 @@ services:
 
   tests:
     container_name: tests
-    image: fastapi-image
+    image: fastapi_repo-fastapi
     environment: *x-env-variables
     volumes:
       - ../../:/fastapi-solution/:ro
