--- a/fastapi-solution/tests/functional/docker-compose.yml
+++ b/fastapi-solution/tests/functional/docker-compose.yml
@@ -16,7 +16,6 @@ services:
   fastapi:
     container_name: fastapi
     build: ../../src
-    image: fastapi-image
     environment: *x-env-variables
     entrypoint: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     ports:
@@ -48,7 +47,7 @@ services:
 
   tests:
     container_name: tests
-    image: fastapi-image
+    image: python:3.11.5
     environment: *x-env-variables
     volumes:
       - ../../:/fastapi-solution/:ro
