--- a/dc-debug.yml
+++ b/dc-debug.yml
@@ -35,6 +35,8 @@ services:
     build: ./fastapi-solution/src
     env_file:
       - ./fastapi-solution/api.env
+    volumes:
+      - ./fastapi-solution/src/:/opt/app/
     depends_on:
       redis:
         condition: service_started
