FastAPI config rewrite as pydantic-settings

--- a/fastapi-solution/api.env
+++ b/fastapi-solution/api.env
@@ -4,4 +4,7 @@ REDIS_PORT=6379
 ES_SCHEME=http
 ES_HOST=elasticsearch
 ES_PORT=9200
+ES_MOVIES_INDEX=movies
+ES_GENRES_INDEX=genres
+ES_PERSONS_INDEX=persons
 PYTHONPATH=/opt/
