--- a/fastapi-solution/src/requirements.txt
+++ b/fastapi-solution/src/requirements.txt
@@ -15,6 +15,7 @@ multidict==6.0.4
 orjson==3.9.10
 pydantic==2.5.1
 pydantic_core==2.14.3
+pydantic_settings==2.1.0
 python-dateutil==2.8.2
 redis==5.0.1
 six==1.16.0
