--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -10,6 +10,10 @@ server {
         proxy_pass http://fastapi:8000;
     }
 
+    location ~ ^/(fileapi) {
+        proxy_pass http://fastapi-file:8000;
+    }
+
     location ~ ^/(admin|__debug__) {
         proxy_pass http://django:8000;
     }
