--- a/fileapi/Dockerfile
+++ b/fileapi/Dockerfile
@@ -5,11 +5,11 @@ WORKDIR /opt/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-COPY requirements.txt requirements.txt
+COPY ./requirements.txt ./requirements.txt
 
 RUN  apt update && apt install gcc && pip install --upgrade pip \
      && pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY ./src ./
 
 ENTRYPOINT ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"]
