--- a/fileapi/dc-debug.yml
+++ b/fileapi/dc-debug.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8001:8000"
     volumes:
-      - ./api/:/opt/app/
+      - ./src/:/opt/app/
   
   db-file:
     extends:
