Add settings for fileapi (#46)

--- a/fileapi/api.env
+++ b/fileapi/api.env
@@ -1,2 +1,18 @@
+# FileAPI service settings
 PROJECT_NAME=FileAPI
 PYTHONPATH=/opt/
+
+# FileAPI Postgres DB settings
+POSTGRES_HOST=db-file
+POSTGRES_PASSWORD=123qwe
+POSTGRES_USER=app
+POSTGRES_DB=fileapi_db
+POSTGRES_PORT=5432
+
+# MinIO settings
+MINIO_HOST=minio
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=practicum
+MINIO_SECRET_KEY=StrongPass
+MINIO_BUCKET='files-storage'
+MINIO_SECURE=False
