--- a/fileapi/pyproject.toml
+++ b/fileapi/pyproject.toml
@@ -22,6 +22,9 @@ orjson = "^3.9.10"
 pydantic-settings = "^2.1.0"
 python-multipart = "^0.0.6"
 aiofiles = "^23.2.1"
+alembic = "^1.13.1"
+sqlmodel = "^0.0.14"
+asyncpg = "^0.29.0"
 
 
 [tool.poetry.group.dev.dependencies]
