--- a/fileapi/requirements.txt
+++ b/fileapi/requirements.txt
@@ -2,9 +2,11 @@ aiofile==3.8.8 ; python_version >= "3.10" and python_version < "4"
 aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0"
 aiohttp==3.9.1 ; python_version >= "3.10" and python_version < "4.0"
 aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+alembic==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 annotated-types==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
 anyio==3.7.1 ; python_version >= "3.10" and python_version < "4.0"
-async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "3.11"
+async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "3.12.0"
+asyncpg==0.29.0 ; python_version >= "3.10" and python_version < "4.0"
 attrs==23.1.0 ; python_version >= "3.10" and python_version < "4.0"
 caio==0.9.13 ; python_version >= "3.10" and python_version < "4"
 certifi==2023.11.17 ; python_version >= "3.10" and python_version < "4.0"
@@ -17,6 +19,8 @@ greenlet==3.0.2 ; python_version >= "3.10" and python_version < "4.0" and (platf
 gunicorn==21.2.0 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
+mako==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
 miniopy-async==1.18 ; python_version >= "3.10" and python_version < "4.0"
 multidict==6.0.4 ; python_version >= "3.10" and python_version < "4.0"
 orjson==3.9.10 ; python_version >= "3.10" and python_version < "4.0"
@@ -28,6 +32,7 @@ python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.23 ; python_version >= "3.10" and python_version < "4.0"
+sqlmodel==0.0.14 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
