Edit fileapi config and env file template (#46)

--- a/fileapi/api.env
+++ b/fileapi/api.env
@@ -1,6 +1,7 @@
 # FileAPI service settings
-PROJECT_NAME=FileAPI
-PYTHONPATH=/opt/
+FILEAPI_PROJECT_NAME=FileAPI
+FILEAPI_PYTHONPATH=/opt/
+FILEAPI_DEBUG=True
 
 # FileAPI Postgres DB settings
 POSTGRES_HOST=db-file
