--- a/fileapi/requirements.txt
+++ b/fileapi/requirements.txt
@@ -30,6 +30,7 @@ pydantic-settings==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.5.2 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
+shortuuid==1.0.11 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.23 ; python_version >= "3.10" and python_version < "4.0"
 sqlmodel==0.0.14 ; python_version >= "3.10" and python_version < "4.0"
