--- a/dc-debug.yml
+++ b/dc-debug.yml
@@ -17,6 +17,11 @@ services:
       - ./fileapi/src/:/opt/app/
     ports:
       - "8002:8000"
+
+  api-migrations:
+    extends:
+      file: ./fileapi/docker-compose.yml
+      service: api-migrations
     
   minio:
     extends:
