--- a/fileapi/Dockerfile
+++ b/fileapi/Dockerfile
@@ -11,5 +11,6 @@ RUN  apt update && apt install gcc && pip install --upgrade pip \
      && pip install --no-cache-dir -r requirements.txt
 
 COPY ./src ./
+COPY ./entrypoint.sh ./
 
-ENTRYPOINT ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"]
+CMD sh entrypoint.sh
