Add fileapi credentials to django settings and .env file (#47)

--- a/django/.env
+++ b/django/.env
@@ -10,3 +10,8 @@ POSTGRES_HOST=db
 POSTGRES_PASSWORD=123qwe
 POSTGRES_USER=app
 POSTGRES_DB=movies_database
+
+## FileAPI settings
+FILEAPI_HOST='http://fastapi-file:8000'
+FILEAPI_UPLOAD_URL='/fileapi/api/v1/files/upload/'
+FILEAPI_DOWNLOAD_URL='/fileapi/api/v1/files/download-stream/'
