Move deps install from entrypoint to Dockerfile to speed up django app startup (#47)

--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -4,6 +4,8 @@ ENV DJANGO_SETTINGS_MODULE 'config.settings.dev'
 
 WORKDIR /code/
 
+RUN apt-get update && apt-get install -y gettext
+
 COPY ./requirements.txt ./requirements.txt
 
 RUN pip install --no-cache-dir -r ./requirements.txt
@@ -11,4 +13,3 @@ RUN pip install --no-cache-dir -r ./requirements.txt
 COPY . .
 
 ENTRYPOINT ["./entrypoint.sh"]
-#ENTRYPOINT ["tail", "-f", "/dev/null"]
