--- a/fileapi/requirements.txt
+++ b/fileapi/requirements.txt
@@ -11,23 +11,30 @@ attrs==23.1.0 ; python_version >= "3.10" and python_version < "4.0"
 caio==0.9.13 ; python_version >= "3.10" and python_version < "4"
 certifi==2023.11.17 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 exceptiongroup==1.2.0 ; python_version >= "3.10" and python_version < "3.11"
 fastapi==0.105.0 ; python_version >= "3.10" and python_version < "4.0"
 frozenlist==1.4.1 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.2 ; python_version >= "3.10" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 gunicorn==21.2.0 ; python_version >= "3.10" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
+httpcore==1.0.2 ; python_version >= "3.10" and python_version < "4.0"
+httpx==0.26.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
+iniconfig==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 mako==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
 miniopy-async==1.18 ; python_version >= "3.10" and python_version < "4.0"
 multidict==6.0.4 ; python_version >= "3.10" and python_version < "4.0"
 orjson==3.9.10 ; python_version >= "3.10" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.10" and python_version < "4.0"
+pluggy==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.14.5 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-settings==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.5.2 ; python_version >= "3.10" and python_version < "4.0"
+pytest-asyncio==0.23.3 ; python_version >= "3.10" and python_version < "4.0"
+pytest-mock==3.12.0 ; python_version >= "3.10" and python_version < "4.0"
+pytest==7.4.4 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.10" and python_version < "4.0"
 shortuuid==1.0.11 ; python_version >= "3.10" and python_version < "4.0"
@@ -35,6 +42,7 @@ sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.23 ; python_version >= "3.10" and python_version < "4.0"
 sqlmodel==0.0.14 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
 typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
 uvicorn==0.25.0 ; python_version >= "3.10" and python_version < "4.0"
